corpus/cpp/overload/case-08/snapshots/gcc15/dual_sink_structured/render.default.txt
note: some compiler details were not fully structured; original diagnostics are preserved
error: [type_mismatch] no matching function for call to 'takes_ref(const char*&)' @ src/main.cpp:6:5
want: int&
got : const char*&
via : void takes_ref(int&) @ src/main.cpp:1:6  +1 candidate
| src/main.cpp:6:5
|     takes_ref(value);
|     ^

error: [type_mismatch] invalid conversion from 'const char*' to 'int' [-fpermissive]
    6 |     takes_ref(value);
      |               ^~~~~
      |               |
      |               const char*
raw : src/main.cpp:6:15: error: invalid conversion from 'const char*' to 'int' [-fpermissive] @ src/main.cpp:6:15
| src/main.cpp:6:15
|     takes_ref(value);
|               ^
because: error: cannot bind rvalue '(int)value' to 'int&'
because: error: invalid conversion from 'const char*' to 'long int' [-fpermissive]
because: error: cannot bind rvalue '(long int)value' to 'long int&'
details: --formed-explain | raw: --formed-raw